TRAC-5938 Description overlapping issue fixed

--- a/src/app/components/views/projects/projects.component.scss
+++ b/src/app/components/views/projects/projects.component.scss
@@ -52,29 +52,6 @@ mat-toolbar {
   cursor: pointer;
 }
 
-.proj-name {
-  font-family: "Inter";
-  font-style: normal;
-  font-size: 20px;
-  line-height: 18px;
-  margin-top: -120px !important;
-  color: #3d3d3d;
-  position: absolute;
-  font-weight: 600;
-}
-
-.time-icon {
-  vertical-align: middle;
-  font-weight: 500;
-  height: 16.03px;
-  width: 16.03px;
-  margin-right: 9.44px;
-  line-height: 17px;
-  /* identical to box height */
-
-  color: #006d2d;
-}
-
 .list-view-time-icon {
   vertical-align: middle;
   font-weight: 500;
@@ -90,17 +67,6 @@ mat-toolbar {
 .projects-div {
   margin-top: 35px;
   flex-grow: 1;
-}
-
-.timestamp {
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 17px;
-  /* identical to box height */
-
-  color: #006d2d;
 }
 
 .btn-icon {
@@ -328,18 +294,6 @@ mat-toolbar {
   }
 }
 
-.proj-description {
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 15px;
-  color: #656565;
-  display: block;
-  word-break: break-all;
-  //margin: 0px 10px 0px 10px;
-  line-height: 22px;
-}
-
 .proj-title {
   font-family: "Inter";
   font-style: normal;
@@ -420,4 +374,249 @@ mat-toolbar {
 .timestamp-div {
   position: absolute;
   margin-bottom: -130px !important;
+}
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+  .proj-description {
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 10px;
+    color: #656565;
+    display: block;
+    word-break: break-all;
+    //margin: 0px 10px 0px 10px;
+    line-height: 18px;
+  }
+
+  .proj-name {
+    font-family: "Inter";
+    font-style: normal;
+    font-size: 14px;
+    line-height: 18px;
+    margin-top: -120px !important;
+    color: #3d3d3d;
+    position: absolute;
+    font-weight: 600;
+  }
+
+  .timestamp {
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 10px;
+    line-height: 17px;
+    /* identical to box height */
+    color: #006d2d;
+  }
+
+  .time-icon {
+    vertical-align: middle;
+    font-weight: 500;
+    height: 10px;
+    width: 10px;
+    margin-right: 18px;
+    line-height: 17px;
+    /* identical to box height */
+  
+    color: #006d2d;
+  }
+  
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+  .proj-description {
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 13px;
+    color: #656565;
+    display: block;
+    word-break: break-all;
+    //margin: 0px 10px 0px 10px;
+    line-height: 20px;
+  }
+
+  .proj-name {
+    font-family: "Inter";
+    font-style: normal;
+    font-size: 16px;
+    line-height: 18px;
+    margin-top: -120px !important;
+    color: #3d3d3d;
+    position: absolute;
+    font-weight: 600;
+  }
+
+  .timestamp {
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 13px;
+    line-height: 17px;
+    /* identical to box height */
+  
+    color: #006d2d;
+  }
+
+  .time-icon {
+    vertical-align: middle;
+    font-weight: 500;
+    height: 13px;
+    width: 13px;
+    margin-right: 18px;
+    line-height: 17px;
+    /* identical to box height */
+  
+    color: #006d2d;
+  }
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+  .proj-description {
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    color: #656565;
+    display: block;
+    word-break: break-all;
+    //margin: 0px 10px 0px 10px;
+    line-height: 22px;
+  }
+
+  .proj-name {
+    font-family: "Inter";
+    font-style: normal;
+    font-size: 16px;
+    line-height: 18px;
+    margin-top: -120px !important;
+    color: #3d3d3d;
+    position: absolute;
+    font-weight: 600;
+  }
+
+  .timestamp {
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 17px;
+    /* identical to box height */
+  
+    color: #006d2d;
+  }
+
+  .time-icon {
+    vertical-align: middle;
+    font-weight: 500;
+    height: 14px;
+    width: 14px;
+    margin-right: 18px;
+    line-height: 17px;
+    /* identical to box height */
+  
+    color: #006d2d;
+  }
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+  .proj-description {
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    color: #656565;
+    display: block;
+    word-break: break-all;
+    //margin: 0px 10px 0px 10px;
+    line-height: 22px;
+  }
+
+  .proj-name {
+    font-family: "Inter";
+    font-style: normal;
+    font-size: 20px;
+    line-height: 18px;
+    margin-top: -120px !important;
+    color: #3d3d3d;
+    position: absolute;
+    font-weight: 600;
+  }
+
+  .timestamp {
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 17px;
+    /* identical to box height */
+  
+    color: #006d2d;
+  }
+
+  .time-icon {
+    vertical-align: middle;
+    font-weight: 500;
+    height: 16.03px;
+    width: 16.03px;
+    margin-right: 9.44px;
+    line-height: 17px;
+    /* identical to box height */
+  
+    color: #006d2d;
+  }
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+  .proj-description {
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    color: #656565;
+    display: block;
+    word-break: break-all;
+    //margin: 0px 10px 0px 10px;
+    line-height: 22px;
+  }
+
+  .proj-name {
+    font-family: "Inter";
+    font-style: normal;
+    font-size: 20px;
+    line-height: 18px;
+    margin-top: -120px !important;
+    color: #3d3d3d;
+    position: absolute;
+    font-weight: 600;
+  }
+
+  .timestamp {
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 17px;
+    /* identical to box height */
+  
+    color: #006d2d;
+  }
+
+  .time-icon {
+    vertical-align: middle;
+    font-weight: 500;
+    height: 16.03px;
+    width: 16.03px;
+    margin-right: 9.44px;
+    line-height: 17px;
+    /* identical to box height */
+  
+    color: #006d2d;
+  }
 }
